<resources>
    <string name="app_name">Shopping List</string>
    <string name="action_settings">Settings</string>
    <string name="delete_all">Delete All</string>
    <string name="item">Item</string>
    <string name="price">Price</string>
    <string name="dolla">$</string>
    <string name="tvDefault">TextView</string>
    <string name="bought">Bought</string>
    <string name="food">Food</string>
    <string name="toilet">Toiletries</string>
    <string name="clothes">Clothes</string>
    <string name="electro">Electronics</string>
    <string name="newItem">New List Item</string>
    <string name="edit_item">Edit item</string>
    <string name="ok">OK</string>
    <string name="nvm">NEVER MIND</string>
    <string name="empty_error">This field can not be empty</string>
    <string name="dbName">shoppingList.db</string>
    <string name="description">Description</string>
</resources>
