<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#333333">

        <TextView
            android:id="@+id/tvItemDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tvDefault"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/type_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/type_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/food_icon" />

        <CheckBox
            android:id="@+id/cb_bought"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/bought"
            android:textColor="#CCCCCC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/type_icon"
            app:layout_constraintTop_toBottomOf="@+id/tvItemDesc" />

        <TextView
            android:id="@+id/tvDolla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/dolla"
            android:textColor="#CCCCCC"
            app:layout_constraintBottom_toBottomOf="@+id/tvItemDesc"
            app:layout_constraintStart_toEndOf="@+id/tvItemDesc"
            app:layout_constraintTop_toTopOf="@+id/tvItemDesc" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/tvDefault"
            android:textColor="#CCCCCC"
            app:layout_constraintBottom_toBottomOf="@+id/tvItemDesc"
            app:layout_constraintStart_toEndOf="@+id/tvDolla"
            app:layout_constraintTop_toTopOf="@+id/tvItemDesc" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_delete" />

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@+id/tvItemDesc"
            app:layout_constraintStart_toEndOf="@+id/tvPrice"
            app:layout_constraintTop_toTopOf="@+id/tvItemDesc"
            app:srcCompat="@android:drawable/ic_menu_edit" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
